	I'll make it the default in the themes.
	
-------------------------------------------------------------------------------
Tue Dec 21 13:19:06 PST 1999	Michael Jennings <mej@eterm.org>

	Fixed the geometry handling again.  Also fixed the parsing of geometry
	strings like '-0+0'.
	
-------------------------------------------------------------------------------
Tue Dec 21 16:04:39 PST 1999	Michael Jennings <mej@eterm.org>

	Fixed a little issue with setting the background pixmap to None via
	the menu.
	
-------------------------------------------------------------------------------
Tue Dec 28 11:44:10 PST 1999	Michael Jennings <mej@eterm.org>

	Thanks to a cl00 from raster, double buffering is much more efficient
	now. :-)
	
-------------------------------------------------------------------------------
Wed Dec 29 12:32:19 PST 1999	Michael Jennings <mej@eterm.org>

	I think I've finally got the menu behavior working right.  Menus now
	move themselves if needed, and exposes are now handled properly.
	
-------------------------------------------------------------------------------
Thu Dec 30 14:55:59 PST 1999	Michael Jennings <mej@eterm.org>

	Finally fixed the seg fault pointed out by Tom Gilbert
	<gilbertt@tomgilbert.freeserve.co.uk> back in mid-September where
	small Eterms with little or no scrollback would crash when receiving
	large amounts of data all at once.

	I also fixed a clearing issue with double buffering, and I worked
	around a really lame gdb/glibc2 bug that has prevented me from using
	gdb with Eterm for ages.
	
-------------------------------------------------------------------------------
Mon Jan  3 11:14:27 PST 2000	Michael Jennings <mej@eterm.org>

	First commit of the new year!  (Notice I didn't say the new millenium,
	since *that* doesn't start until Jan 1, 2001.)

	This should hopefully fix the bug where dead keys would bring up the
	menu.
	
-------------------------------------------------------------------------------